@@ -1,4 +1,4 @@
-AC_INIT([protobuf-perlxs], [0.4], [dave@daveb.net])
+AC_INIT([protobuf-perlxs], [0.5], [dave@daveb.net])
 AM_INIT_AUTOMAKE([-Wall])
 AC_PROG_CXX
 AC_PROG_CC
@@ -25,6 +25,7 @@ Makefile
 src/Makefile
 examples/simple/Makefile.PL
 examples/embedded/Makefile.PL
+examples/types/Makefile.PL
 ])
 AC_OUTPUT
 
